--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -106,6 +106,18 @@
         Course length and fees
       </h2>
 
+      {% set courseLengthText %}
+        {% if course.courseLength.length %}
+          {% if course.courseLength == "other" %}
+            {{ course.courseLengthOther }}
+          {% else %}
+            {{ course.courseLength | getCourseLengthLabel }}
+          {% endif %}
+        {% else %}
+          Not entered
+        {% endif %}
+      {% endset %}
+
       {{ govukSummaryList({
         rows: [
           {
@@ -113,7 +125,7 @@
               text: "Course length"
             },
             value: {
-              text: course.courseLength | getCourseLengthLabel if course.courseLength.length else "Not entered",
+              text: courseLengthText,
               classes: "govuk-hint" if not course.courseLength.length
             },
             actions: {
