Update showy-hidey text

--- a/app/views/courses/about-course.njk
+++ b/app/views/courses/about-course.njk
@@ -79,7 +79,7 @@
         {% endset %}
 
         {{ govukDetails({
-          summaryText: "PLACEHOLDER",
+          summaryText: "Help with about this course",
           html: helpTextHtml
         }) }}
 
