--- a/app/views/courses/interview-process.njk
+++ b/app/views/courses/interview-process.njk
@@ -56,7 +56,7 @@
         {% endset %}
 
         {{ govukDetails({
-          summaryText: "PLACEHOLDER",
+          summaryText: "Help with interview process",
           html: helpTextHtml
         }) }}
 
