--- a/app/views/courses/school-placements.njk
+++ b/app/views/courses/school-placements.njk
@@ -67,7 +67,7 @@
         {% endset %}
 
         {{ govukDetails({
-          summaryText: "PLACEHOLDER",
+          summaryText: "Help with how school placements work",
           html: helpTextHtml
         }) }}
 
