Update organisation landing page

--- a/app/views/organisations/index.njk
+++ b/app/views/organisations/index.njk
@@ -42,7 +42,7 @@
       </ul>
 
       <h2 class="govuk-heading-m">
-        <a class="govuk-link" href="/organisations/{{ organisation.id }}/locations">Locations</a>
+        <a class="govuk-link" href="/organisations/{{ organisation.id }}/cycles/2022/locations">Locations</a>
       </h2>
 
       <p class="govuk-body">Use this section to:</p>
