--- a/app/views/locations/list.njk
+++ b/app/views/locations/list.njk
@@ -50,9 +50,9 @@
                   <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ location.id }}">
                     {{ location.name }}
                   </a>
-                  <span class="govuk-body-s">
-                    {{ location.code }}
-                  </span>
+                </td>
+                <td class="govuk-table__cell">
+                  {{ location.code if location.code else "Not entered" }}
                 </td>
                 <td class="govuk-table__cell">
                   {{ location.urn if location.urn else "Not entered" }}
