Update edit course

--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -129,6 +129,10 @@
 
       </form>
 
+      <p class="govuk-body">
+        <a class="govuk-link" href="{{ actions.cancel }}">Cancel</a>
+      </p>
+
     </div>
   </div>
 
