Update course details view

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -218,7 +218,7 @@
           },
           {
             key: {
-              text: "Location" + ("s" if course.locations > 1)
+              text: "Location" + ("s" if course.locations.length > 1)
             },
             value: {
               html: locationHtml
