--- a/app/views/organisations/index.njk
+++ b/app/views/organisations/index.njk
@@ -30,7 +30,7 @@
       </p>
 
       <h2 class="govuk-heading-m">
-        <a class="govuk-link" href="/organisations/{{ organisation.id }}">About your organisation</a>
+        <a class="govuk-link" href="/organisations/{{ organisation.id }}/details">About your organisation</a>
       </h2>
 
       <p class="govuk-body">Use this section to:</p>
