--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -12,10 +12,10 @@
 
 {% block content %}
 
-  {% include "_includes/error-summary.njk" %}
+  {% include "_includes/notification-banner.njk" %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
         {% if caption %}
@@ -56,7 +56,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/edit",
                   text: "Change",
                   visuallyHiddenText: "UK provider reference number (UKPRN)"
                 }
@@ -73,7 +73,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/edit",
                   text: "Change",
                   visuallyHiddenText: "unique reference number (URN)"
                 }
@@ -90,7 +90,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/training",
                   text: "Change",
                   visuallyHiddenText: "information about training with your organisation"
                 }
@@ -107,7 +107,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/training-with-disabilities",
                   text: "Change",
                   visuallyHiddenText: "information about training with disabilities and other needs"
                 }
@@ -117,7 +117,7 @@
         ]
       }) }}
 
-      <h2 class="govuk-heading-m">Contact details</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-top-9">Contact details</h2>
 
       {% set addressHtml %}
         <p class="govuk-body">
@@ -151,7 +151,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/contact-details",
                   text: "Change",
                   visuallyHiddenText: "email address"
                 }
@@ -168,7 +168,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/contact-details",
                   text: "Change",
                   visuallyHiddenText: "telephone number"
                 }
@@ -185,7 +185,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/contact-details",
                   text: "Change",
                   visuallyHiddenText: "website"
                 }
@@ -202,7 +202,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/contact-details",
                   text: "Change",
                   visuallyHiddenText: "website"
                 }
@@ -212,7 +212,7 @@
         ]
       }) }}
 
-      <h2 class="govuk-heading-m">Visa sponsorship</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-top-9">Visa sponsorship</h2>
 
       {{ govukSummaryList({
         rows: [
@@ -226,7 +226,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/visa-sponsorship",
                   text: "Change",
                   visuallyHiddenText: "if candidates get a sponsored Student visa for your fee-paying courses"
                 }
@@ -243,7 +243,7 @@
             actions: {
               items: [
                 {
-                  href: "#",
+                  href: actions.change + "/visa-sponsorship",
                   text: "Change",
                   visuallyHiddenText: "if candidates get a sponsored Skilled Worker visa for your salaried courses"
                 }
@@ -253,7 +253,12 @@
         ]
       }) }}
 
-      <h2 class="govuk-heading-m">Accredited bodies</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-top-9">Accredited bodies</h2>
+
+      {#{ govukButton({
+        text: "Add accredited body",
+        href: "#"
+      }) }#}
 
       <dl class="govuk-summary-list">
         {% for accreditedBody in organisation.accreditedBodies %}
@@ -265,7 +270,7 @@
             {{ accreditedBody.description | nl2br | markdownToHtml | safe }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
+            <a class="govuk-link" href="{{ actions.change }}/accredited-bodies/{{ accreditedBody.id }}">
               Change<span class="govuk-visually-hidden"> {{ accreditedBody.name }}’s description</span>
             </a>
           </dd>
