Update course list layout

--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -35,7 +35,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      {% if courses.length %}
+      {#% if courses.length %}
         <table class="govuk-table app-table--vertical-align-middle">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
@@ -65,7 +65,6 @@
                     text: course.status | getCourseStatusLabel,
                     classes: course.status | getCourseStatusClasses
                   }) }}
-                  <!-- <strong class="govuk-tag govuk-tag--green">Published</strong> -->
                 </td>
                 <td class="govuk-table__cell">
                   {% if course.status == 0 %}
@@ -99,9 +98,9 @@
         </table>
       {% else %}
         <p class="govuk-body">There are no courses for {{ provider.name if provider.name else "your organisation" }}.</p>
-      {% endif %}
+      {% endif %#}
 
-      <!-- {#% for provider in courses %}
+      {% for provider in courses %}
 
         {% if provider.name %}
           <h2 class="govuk-heading-m">
@@ -131,7 +130,7 @@
               {% for course in provider.courses %}
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell app-table--courses__course-name">
-                    <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ course.code }}">
+                    <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ course.id }}">
                       {{ course.name }} ({{ course.code }})
                     </a>
                     <span class="govuk-body-s">
@@ -139,18 +138,35 @@
                     </span>
                   </td>
                   <td class="govuk-table__cell">
-                    <strong class="govuk-tag govuk-tag--green">Published</strong>
+                    {{ govukTag({
+                      text: course.status | getCourseStatusLabel,
+                      classes: course.status | getCourseStatusClasses
+                    }) }}
                   </td>
                   <td class="govuk-table__cell">
-                    <a class="govuk-link" href="#">
-                      Yes - view online
-                    </a>
+                    {% if course.status == 0 %}
+                      No – still in draft
+                    {% elif course.status == 3 %}
+                      No – withdrawn
+                    {% else %}
+                      <a class="govuk-link" href="#">
+                        Yes - view online
+                      </a>
+                    {% endif %}
                   </td>
                   <td class="govuk-table__cell">
-                    Open
+                    {% if course.status == 1 %}
+                      Open
+                    {% elif course.status == 3 %}
+                      Closed
+                    {% endif %}
                   </td>
                   <td class="govuk-table__cell">
-                    Yes (<a class="govuk-link" href="/organisations/1A4/2022/courses/J084/vacancies">Edit<span class="govuk-visually-hidden"> vacancies for Art and design (J084)</span></a>)
+                    {% if course.status == 1 %}
+                      Yes (<a class="govuk-link" href="#">Edit<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
+                    {% elif course.status == 3 %}
+                      No
+                    {% endif %}
                   </td>
                 </tr>
               {% endfor %}
@@ -162,7 +178,7 @@
           <p class="govuk-body">There are no courses for {{ provider.name if provider.name else "your organisation" }}.</p>
         {% endif %}
 
-      {% endfor %#} -->
+      {% endfor %}
 
     </div>
   </div>
