Mark content as not entered if empty

--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -274,9 +274,15 @@
             <dt class="govuk-summary-list__key">
               {{ accreditedBody.name }}
             </dt>
-            <dd class="govuk-summary-list__value">
-              {{ accreditedBody.description | nl2br | markdownToHtml | safe }}
-            </dd>
+            {% if accreditedBody.description.length %}
+              <dd class="govuk-summary-list__value">
+                {{ accreditedBody.description | nl2br | markdownToHtml | safe }}
+              </dd>
+            {% else %}
+              <dd class="govuk-summary-list__value govuk-hint">
+                Not entered
+              </dd>
+            {% endif %}
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="{{ actions.change }}/accredited-bodies/{{ accreditedBody.id }}">
                 Change<span class="govuk-visually-hidden"> {{ accreditedBody.name }}’s description</span>
