Fix spelling mistake

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -262,7 +262,7 @@
                 {
                   href: actions.change + "/applications-open-date?referrer=details",
                   text: "Change",
-                  visuallyHiddenText: "applications-open-date"
+                  visuallyHiddenText: "applications open date"
                 }
               ]
             }
